# CPSC-484-Computer-Graphics

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  opengl.cpp
c++/: .clang-format  CMakeLists.txt
c++/src/data_structs/: CMakeLists.txt  main.cpp  matrix3dT.h  quaternion_T.h  vector3dT.h
c++/src/matrix/: CMakeLists.txt  main.cpp  matrix3dT.h  vector3dT.h
c++/src/opengl/: CMakeLists.txt  opengl.cpp
c++/src/teapot/: CMakeLists.txt  opengl_with_rot_teapot.cpp
c++/src/vector/: vector.h
python/RayTracingFromScratch/: ray_tracer.py  raytrace.py
python/quaternions_matrices_vectors/: matrix.py  quaternion.py  vector.py
qt/cube/: cube.pro  geometryengine.cpp  main.cpp  mainwidget.cpp  mainwidget.h
qt/eight_cubes/: main.cpp  main_widget.cpp  main_widget.h  texture_cube.cpp  texture_cube.h
qt/four_cubes/: main_widget.cpp  texture_cube.h
qt/raytracer/: main.cpp  mainwindow.cpp  mainwindow.h  raytracer.pro
qt/raytracer/BRDFs/: BRDF.cpp  BRDF.h  FresnelReflector.cpp  FresnelReflector.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h  SV_Lambertian.cpp  SV_Lambertian.h
qt/raytracer/BTDFs/: BTDF.cpp  BTDF.h  (+3 more)
qt/raytracer_cityview/: raytracer_cityview.pro
qt/raytracer_spheres/: raytracer.pro
qt/thirty_cubes/: geometryengine.h  main.cpp  main_widget.cpp  main_widget.h  texture_cube.cpp  texture_cube.h
src/matrix/: main.cpp  matrix3dT.h  vector3dT.h
src/opengl/: CMakeLists.txt  opengl.cpp
src/teapot/: opengl_with_rot_teapot.cpp
src/vector/: CMakeLists.txt  main.cpp  vector.h
(+349 files in other folders)
